<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ServiceFrag">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/header"
        android:layout_width="384dp"
        android:layout_height="51dp"
        android:drawableBottom="@drawable/u4"
        android:gravity="bottom|center"
        android:text="@string/h2"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/S1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/s21"
            android:textColor="@android:color/background_dark" />

        <TextView
            android:id="@+id/S2"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/s22"
            android:textColor="@android:color/background_dark" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/S3"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|center"
            android:text="@string/s23"
            android:textColor="@android:color/background_dark" />

        <TextView
            android:id="@+id/S4"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|center"
            android:text="@string/s24"
            android:textColor="@android:color/background_dark" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:background="@drawable/blackbg"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="437dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="cursive"
            android:gravity="right"
            android:text="Contact us for any queries"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autoLink="phone"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="+1 234 567-8901"
            android:textColor="@android:color/background_light"
            android:textColorLink="@android:color/background_light"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>