<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="0dp"
    android:gravity="top"
    tools:context=".Room">
    <FrameLayout
        android:id="@+id/fragment_container"
        android:name="com.example.android.fragmentexample.SimpleFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/activity_confirmation_fragment" />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:clickable="true"
        android:src="@drawable/homeicon" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:gravity="right"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="2dp"
            tools:layout_editor_absoluteY="332dp">

            <ImageView
                android:id="@+id/imageViewRoom"
                android:layout_width="match_parent"
                android:layout_height="172dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/room1" />

            <TextView
                android:id="@+id/textDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="Booking details"
                android:textAlignment="center"
                android:textColor="#803333"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Please insert your booking details..."
                android:textColor="#000000" />

            <LinearLayout
                android:id="@+id/layoutBooking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:visibility="gone">


                <EditText
                    android:id="@+id/etDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:foregroundGravity="center"
                    android:hint="Enter date "
                    android:inputType="date" />

                <EditText
                    android:id="@+id/etNumberOfDays"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Number of days"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/etNumberOfGuests"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Number of people"
                    android:inputType="number" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/imgBtnMoreDetails"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_below="@+id/textView10"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/plus"
                android:clickable="true" />


            <ImageButton
                android:id="@+id/imgBtnLessDetails"
                android:layout_width="40dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/textView10"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/minus"
                android:clickable="true"
                android:foregroundGravity="center"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:gravity="right"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="2dp"
                tools:layout_editor_absoluteY="332dp">

                <TextView
                    android:id="@+id/txtRoom1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:text="@string/room1Title"
                    android:textAlignment="viewStart"
                    android:textColor="#803333"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/description_room1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:maxLines="2"
                    android:padding="5dp"
                    android:text="@string/room1"
                    android:textColor="#000000"
                    tools:layout_editor_absoluteX="30dp"
                    tools:layout_editor_absoluteY="163dp" />

                <ImageButton
                    android:id="@+id/imgBtnMoreRoom"
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:layout_below="@+id/description_text2"
                    android:layout_margin="5dp"
                    android:background="@drawable/plus"
                    android:clickable="true" />


                <ImageButton
                    android:id="@+id/imgBtnLessRoom1"
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/description_text2"
                    android:layout_margin="5dp"
                    android:background="@drawable/minus"
                    android:clickable="true"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/button1room"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Book" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:gravity="right"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="2dp"
                tools:layout_editor_absoluteY="332dp">

                <TextView
                    android:id="@+id/txtRoom2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="cursive"
                    android:text="@string/room2Title"
                    android:textAlignment="viewStart"
                    android:textColor="#803333"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/description_room2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:maxLines="2"
                    android:padding="15dp"
                    android:text="@string/room2"
                    android:textColor="#000000"
                    tools:layout_editor_absoluteX="30dp"
                    tools:layout_editor_absoluteY="163dp" />

                <ImageButton
                    android:id="@+id/imgBtnMoreRoom2"
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:layout_below="@+id/description_text2"
                    android:layout_margin="5dp"
                    android:background="@drawable/plus"
                    android:clickable="true" />


                <ImageButton
                    android:id="@+id/imgBtnLessRoom2"
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/description_text2"
                    android:layout_margin="5dp"
                    android:background="@drawable/minus"
                    android:clickable="true"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/button2room"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Book" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:gravity="right"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="2dp"
                tools:layout_editor_absoluteY="332dp">

                <TextView
                    android:id="@+id/txtRoom3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="cursive"
                    android:text="@string/room3Title"
                    android:textAlignment="viewStart"
                    android:textColor="#803333"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/description_room3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:maxLines="2"
                    android:padding="15dp"
                    android:text="@string/room3"
                    android:textColor="#000000"
                    tools:layout_editor_absoluteX="30dp"
                    tools:layout_editor_absoluteY="163dp" />

                <ImageButton
                    android:id="@+id/imgBtnMoreRoom3"
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:layout_below="@+id/description_text2"
                    android:layout_margin="5dp"
                    android:background="@drawable/plus"
                    android:clickable="true" />


                <ImageButton
                    android:id="@+id/imgBtnLessRoom3"
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/description_text2"
                    android:layout_margin="5dp"
                    android:background="@drawable/minus"
                    android:clickable="true"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/button3room"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Book" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>




</LinearLayout>